--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   background-color: var(--cream);
   color: var(--black);
 }
